fixed the issue with the member 1 picture being over stretched on mobile devices in prod. The issue was the max-height property applied to the member and member certificate pics. Also removed unnecessary divs in the about page.

--- a/app/assets/stylesheets/components/_member-card-2.scss
+++ b/app/assets/stylesheets/components/_member-card-2.scss
@@ -20,13 +20,13 @@
 
 .member-certificates {
   max-width: 100%;
-  max-height: 100%;
+  // max-height: 100%;
   padding-top: 20px;
 }
 
 .member-pic {
   max-width: 100%;
-  max-height: 100%;
+  // max-height: 100%;
   border-radius: 5px;
 }
 
